[tool.poetry]
name = "cush"
version = "0.0.1"
description = ""
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaleidoscope = {path = "../kaleidoscope"}
thewired = {path = "../thewired"}
colorlog = {path = "../colorlog"}
boto3 = "^1.12.42"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
