[tool.poetry]
name = "cush"
version = "0.0.1"
description = ""
authors = ["James Light <j.gareth.light@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
thewired = {path = "../thewired", develop = true}
kaleidoscope = {path = "../kaleidoscope", develop = true}
colorlog = {path = "../colorlog", develop = true}
boto3 = "^1.12.42"
boto = "^2.49.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
